# AdventOfCode

./: .gitignore
AdventOfCode2024/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp
AdventOfCode2024/data/: day4_test_input.txt
AdventOfCode2024/utils/: input_reader.cpp  input_reader.h
AdventOfCode2025/: CMakeLists.txt  day1.cpp  day10_part1.cpp  day10_part2.cpp  day11_part1.cpp  day11_part2.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
